[gd_scene load_steps=2 format=3 uid="uid://c7sxmwe7aqtc0"]

[ext_resource type="Script" uid="uid://6xf06j4i4xgd" path="res://source/ui/pause_form.gd" id="1_pause"]

[node name="PauseForm" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -46.5
offset_right = 65.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save
"

[node name="SettingsButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Settings"

[node name="MenuButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
